--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "has": "^1.0.3",
     "has-flag": "^4.0.0",
     "human-signals": "^2.1.0",
+    "i18next": "^21.6.10",
     "import-local": "^3.1.0",
     "interpret": "^2.2.0",
     "is-core-module": "^2.8.1",
@@ -99,6 +100,7 @@
     "neo-async": "^2.6.2",
     "node-releases": "^2.0.1",
     "npm-run-path": "^4.0.1",
+    "on-change": "^4.0.0",
     "onetime": "^5.1.2",
     "p-limit": "^2.3.0",
     "p-locate": "^4.1.0",
@@ -134,6 +136,7 @@
     "webpack-merge": "^5.8.0",
     "webpack-sources": "^3.2.3",
     "which": "^2.0.2",
-    "wildcard": "^2.0.0"
+    "wildcard": "^2.0.0",
+    "yup": "^0.32.11"
   }
 }
