--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "acorn-import-assertions": "^1.8.0",
     "ajv": "^6.12.6",
     "ajv-keywords": "^3.5.2",
+    "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
     "browserslist": "^4.19.1",
     "buffer-from": "^1.1.2",
