--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@hexlet/code",
   "version": "1.0.0",
-  "description": "",
+  "description": "RSS агрегатор",
   "main": "./src/app.js",
   "scripts": {
-    "webpack": "webpack",
+    "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
