--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./src/app.js",
   "scripts": {
     "build": "webpack",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "NODE_OPTIONS=--experimental-vm-modules npx jest"
   },
   "repository": {
     "type": "git",
@@ -22,7 +22,8 @@
     "@babel/core": "^7.16.12",
     "@babel/eslint-parser": "^7.16.5",
     "@babel/preset-env": "^7.16.11",
-    "babel-jest": "^27.4.6",
+    "@testing-library/jest-dom": "^5.16.2",
+    "babel-jest": "^27.5.1",
     "babel-loader": "^8.2.3",
     "css-loader": "^6.2.0",
     "css-minimizer-webpack-plugin": "^3.4.1",
@@ -33,7 +34,7 @@
     "eslint-webpack-plugin": "^3.1.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
-    "jest": "^27.4.7",
+    "jest": "^27.5.1",
     "jest-cli": "^27.4.7",
     "mini-css-extract-plugin": "^2.5.3",
     "sass": "^1.49.0",
@@ -45,6 +46,8 @@
     "webpack-dev-server": "^4.7.3"
   },
   "dependencies": {
+    "@testing-library/dom": "^8.11.3",
+    "@testing-library/user-event": "^13.5.0",
     "acorn": "^8.7.0",
     "acorn-import-assertions": "^1.8.0",
     "ajv": "^6.12.6",
@@ -64,7 +67,7 @@
     "envinfo": "^7.8.1",
     "es-module-lexer": "^0.9.3",
     "escalade": "^3.1.1",
-    "eslint-plugin-jest": "^26.0.0",
+    "eslint-plugin-jest": "^26.1.0",
     "eslint-scope": "^5.1.1",
     "esrecurse": "^4.3.0",
     "estraverse": "^4.3.0",
@@ -100,6 +103,7 @@
     "mime-db": "^1.51.0",
     "mime-types": "^2.1.34",
     "mimic-fn": "^2.1.0",
+    "msw": "^0.36.8",
     "neo-async": "^2.6.2",
     "node-releases": "^2.0.1",
     "npm-run-path": "^4.0.1",
@@ -115,6 +119,7 @@
     "pkg-dir": "^4.2.0",
     "punycode": "^2.1.1",
     "randombytes": "^2.1.0",
+    "read-package-json-fast": "^2.0.3",
     "rechoir": "^0.7.1",
     "resolve": "^1.22.0",
     "resolve-cwd": "^3.0.0",
